[package]
name = "gattaca"
version = "1.0.0"
edition = "2021"
author = ["David Clevenger <dclevenger00@gmail.com>"]
license = "MIT"
description = "A base4 encoding using the four bases (nucleotides) found in DNA"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gattaca"
path = "src/lib.rs"

[[bin]]
name = "gattaca"
path = "src/gattaca.rs"


[dependencies]

